--- a/assets/rpg.config
+++ b/assets/rpg.config
@@ -2,7 +2,7 @@
 <Project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <propertyGroup>
     <StartProgram>E:\zgj\git\runtime\win32\zh3_3.exe</StartProgram>
-    <StartArguments />
+    <StartArguments>-workdir E:\zgj\git\rpg\assets</StartArguments>
     <StartWorkingDirectory>E:\zgj\git\rpg\assets</StartWorkingDirectory>
   </propertyGroup>
 </Project>
